test/good/functions/var8.px

func call(->Void proc) def
    proc()

func p1() def
    print "p1"

func p2() def
    p1 = p2
    print "p2"

call(p1)
call(p2)
call(p1)
