test/bad/nullables/print01.px

f: (String->Void)? = write
print f
